--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -21,7 +21,7 @@ jobs:
       # note: all npm operations run in website
       - name: Install dependencies
         working-directory: ./website
-        run: npm ci
+        run: npm install
       
       - name: Build project
         working-directory: ./website
