--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -34,4 +34,4 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MY_GITHUB_WEBSITE_35972 }}
           channelId: live
           projectId: my-github-website-35972
-          projectPath: ./website  
+          projectPath: ./src  
