adjusted names in pull-request.yml

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   validate-docs: # Vale documentation validation
+    name: Vale Documentation Validation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,6 +22,7 @@ jobs:
         run: vale --output=line --sort --relative --config=.vale.ini .
   
   run-tests:  # Jest testing
+    name: Jest Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -34,6 +36,7 @@ jobs:
           CI: true
           
   build_and_preview:
+    name: Firebase Preview
     needs: [validate-docs, run-tests]  # Only run if validation and tests pass
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     runs-on: ubuntu-latest
