--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,8 +17,9 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install and Run Vale
       run: |
-        curl -sfL https://install.goreleaser.com/github.com/errata-ai/vale.sh | bash -s -- v2.28.0
-        sudo mv bin/vale /usr/local/bin/
+        wget https://github.com/errata-ai/vale/releases/download/v2.28.0/vale_2.28.0_Linux_64-bit.tar.gz
+        tar -xvzf vale_2.28.0_Linux_64-bit.tar.gz
+        sudo mv vale /usr/local/bin/
         vale --output=line --sort --relative --config=.vale.ini .
   
   run-tests:  # Jest testing
