attempt 4 to fix vale test

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,16 +11,19 @@ permissions:
 
 jobs:
   validate-docs: # Vale documentation validation
-  name: Vale Documentation Validation
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - name: Install and Run Vale
-      run: |
-        wget https://github.com/errata-ai/vale/releases/download/v2.28.0/vale_2.28.0_Linux_64-bit.tar.gz
-        tar -xvzf vale_2.28.0_Linux_64-bit.tar.gz
-        sudo mv vale /usr/local/bin/
-        vale --output=line --sort --relative --config=.vale.ini .
+  - name: Vale Documentation Validation
+  run: |
+    # Install Vale directly to persistent PATH location
+    sudo wget https://github.com/errata-ai/vale/releases/download/v2.28.0/vale_2.28.0_Linux_64-bit.tar.gz -O /tmp/vale.tar.gz
+    sudo tar -xzf /tmp/vale.tar.gz -C /usr/local/bin
+    sudo chmod +x /usr/local/bin/vale
+    
+    # Verify installation
+    echo "Vale path: $(which vale)"
+    echo "Vale version: $(vale --version)"
+    
+    # Run with full path to be absolutely certain
+    /usr/local/bin/vale --output=line --sort --relative --config=.vale.ini .
   
   run-tests:  # Jest testing
     runs-on: ubuntu-latest
