--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,21 +11,14 @@ permissions:
 
 jobs:
   validate-docs: # Vale documentation validation
-    name: Vale Documentation Validation
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-      - name: Install and Run Vale
-        run: |
-          go install github.com/errata-ai/vale@v2.28.0
-          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
-          sleep 5
-          vale --version
-          vale --output=line --sort --relative --config=.vale.ini .
+  name: Vale Documentation Validation
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v4
+    - name: Run Vale via Docker
+      uses: docker://errataai/vale:2.28.0
+      with:
+        args: --output=line --sort --relative --config=/github/workspace/.vale.ini /github/workspace
   
   run-tests:  # Jest testing
     runs-on: ubuntu-latest
