revert to original - to fix vale test

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,16 +9,21 @@ permissions:
   contents: read
   pull-requests: write
 
+# not yet pushed 
 jobs:
   validate-docs: # Vale documentation validation
   name: Vale Documentation Validation
   runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v4
-    - name: Run Vale via Docker
-      uses: docker://errataai/vale:2.28.0
-      with:
-        args: --output=line --sort --relative --config=/github/workspace/.vale.ini /github/workspace
+     steps:
+       - uses: actions/checkout@v4
+       - name: Install Vale
+         uses: errata-ai/vale-action@v2
+         with:
+           version: '2.28.0'
+           config: '.vale.ini'
+           files: '**/*.md'
+       - name: Run Vale
+         run: vale --output=line --sort --relative --config=.vale.ini .
   
   run-tests:  # Jest testing
     runs-on: ubuntu-latest
