attempt 10 to fix jest tests

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -28,31 +28,28 @@ run_tests:
   steps:
     - uses: actions/checkout@v4
 
-    - name: Change to website directory
-      run: cd website
-      shell: bash
-
-    - name: Debug - Verify Location
+    - name: Debug - Show directory structure
       run: |
         echo "Current directory: $(pwd)"
-        echo "Files in directory:"
+        echo "Contents:"
         ls -la
-        echo "Package.json contents:"
-        cat package.json
+        echo "Website contents:"
+        ls -la website/
 
+    # Set up Node.js WITHOUT automatic npm install
     - name: Set up Node.js
-      run: |
-        echo "Setting up Node in: $(pwd)"
-        corepack enable
       uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
+        cache-dependency-path: 'website/package-lock.json' 
 
     - name: Install dependencies
+      working-directory: ./website
       run: npm ci
 
     - name: Run tests
+      working-directory: ./website
       run: npm test
       env:
         CI: true
