--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -29,20 +29,21 @@ jobs:
 
       - name: Debug - Show directory structure
         run: |
-          cd website
           echo "Current directory: $(pwd)"
           echo "Contents:"
           ls -la
+          echo "Website contents:"
+          ls -la website/
           echo "package.json exists:"
-          test -f package.json && echo "Yes" || echo "No"
+          test -f website/package.json && echo "Yes" || echo "No"
 
+      # Set up Node.js WITHOUT cache first
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'website/package-lock.json'
 
+      # Now change to website directory for all npm operations
       - name: Install dependencies
         working-directory: ./website
         run: |
@@ -65,8 +66,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'website/package-lock.json'
       - name: Install dependencies
         working-directory: ./website
         run: npm ci
