--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -44,19 +44,25 @@ jobs:
           CI: true
 
   build_and_preview:
-    name: Firebase Preview
-    needs: [validate-docs, run-tests]  # Only run if validation and tests pass
+    needs: [validate-docs, run_tests] # will not run until previous tests pass 
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+    
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-      - run: npm install
-      - run: npm run build
+
+      - name: Install dependencies
+        working-directory: ./website 
+        run: npm ci
+
+      - name: Build
+        working-directory: ./website  
+        run: npm run build
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
