--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -44,7 +44,7 @@ jobs:
           CI: true
 
   build_and_preview:
-    needs: [validate-docs, run_tests] # will not run until previous tests pass 
+    needs: [validate-docs, run-tests] # will not run until previous tests pass 
     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     runs-on: ubuntu-latest
     steps:
